[package]
name = "densemap"
version = "0.1.2"
authors = ["GossiperLoturot"]
edition = "2021"
description = "A collection data structure that is permanently accessible by unique keys and fast iterable."
readme = "README.md"
repository = "https://github.com/GossiperLoturot/densemap"
license = "MIT"
keywords = ["allocator", "storage", "no_std"]
categories = ["memory-management", "data-structures", "no-std"]

[features]
default = []

[features]
default = ["std"]
std = []

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[dev-dependencies.slab]
version = "0.4"

[dev-dependencies.slotmap]
version = "1"

[[bench]]
name = "benchmark"
harness = false
